--- a/src/components/Expertise/index.css
+++ b/src/components/Expertise/index.css
@@ -1,7 +1,8 @@
-*{
+* {
     margin: 0;
 }
-.expertise-maincontainer{
+
+.expertise-maincontainer {
     font-family: 'Poppins';
     height: cover;
     margin: 0;
@@ -9,37 +10,37 @@
     color: #082354;
 }
 
-.expertise-heading-container{
+.expertise-heading-container {
     padding: 30px;
 }
 
-.expertise-heading{
+.expertise-heading {
     margin-bottom: 10px;
 }
 
-.expertise-para{
+.expertise-para {
     margin-bottom: 10px;
 }
 
-.expertise-info-container{
+.expertise-info-container {
     background-color: #082354;
     color: #ffffff;
     padding: 30px;
     border-radius: 10px;
 }
 
-.expertise-info-button{
+.expertise-info-button {
     border: none;
     border-radius: 30px;
     height: 50px;
     width: 50px;
 }
 
-.expertise-info-head{
+.expertise-info-head {
     padding: 10px;
 }
 
-.expertise-info-heading{
+.expertise-info-heading {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -47,25 +48,25 @@
     height: 90px;
 }
 
-.expertise-info-subcontainer{
+.expertise-info-subcontainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-.expertise-info-subcontainer-a{
+.expertise-info-subcontainer-a {
     margin: 20px;
 }
 
-.line-break{
+.line-break {
     border-color: #ffffff;
     background-color: #ffffff;
     height: 1px;
     border-radius: 10px;
 }
 
-.expertise-seemore-btn{
+.expertise-seemore-btn {
     margin: 40px;
     width: 150px;
     height: 40px;
@@ -76,7 +77,13 @@
     font-weight: bold;
 }
 
-.expertise-btn-container{
+.expertise-seemore-btn:hover {
+    box-shadow: 0 5px #082354;
+    transform: translateX(8px);
+}
+
+
+.expertise-btn-container {
     text-align: center;
 }
 
@@ -85,7 +92,7 @@
         font-size: 1.8em;
         margin-left: 20px;
     }
-    
+
     .ourexp-para {
         font-size: 18px;
         margin-left: 20px;
@@ -113,7 +120,7 @@
         margin-left: 10px;
         text-align: center;
     }
-    
+
     .ourexp-para {
         font-size: 16px;
         margin-left: 10px;
@@ -152,7 +159,7 @@
         margin-left: 0;
         text-align: center;
     }
-    
+
     .ourexp-para {
         font-size: 14px;
         margin-left: 0;
