--- a/src/components/OurPartners/index.css
+++ b/src/components/OurPartners/index.css
@@ -1,5 +1,5 @@
 .ourpartner-container{
-    height: 100vh;
+    height: cover;
     background-color: #F1F1FF;
     color: #082354;
 }
@@ -15,71 +15,26 @@
     justify-content: space-around;
 }
 
-.subcont-1{
-    width: 30%;
-    margin-top: 20px;
-}
 
-.circle-container {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 0 auto;
-    border-radius: 50%;
+.followers-a{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-
-.globe {
-    border-radius: 60px;
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    z-index: 1;
-}
-
-.globe img {
-    width: 100%;
-    height: 100%;
-    border-radius: 100px;
-    object-fit: contain;
-}
-
-.circle-item {
-    position: absolute;
-    width: 90px;
-    height: 90px;
-    padding: 20px;
-    border: 5px solid #ffffff;
-    border-radius: 50%;
-    display: flex;
-    background-color: #C1D2FC;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 10px;
-    z-index: 0;
-}
-
-.circle-item-0 { top: 10%; left: 50%; transform: translate(-50%, -50%); }
-.circle-item-1 { top: 20%; left: 80%; transform: translate(-50%, -50%); }
-.circle-item-2 { top: 50%; left: 100%; transform: translate(-50%, -50%); }
-.circle-item-3 { top: 80%; left: 80%; transform: translate(-50%, -50%); }
-.circle-item-4 { top: 100%; left: 50%; transform: translate(-50%, -50%); }
-.circle-item-5 { top: 80%; left: 20%; transform: translate(-50%, -50%); }
-.circle-item-6 { top: 50%; left: 0%; transform: translate(-50%, -50%); }
-.circle-item-7 { top: 20%; left: 20%; transform: translate(-50%, -50%); }
-.circle-item-8 { top: 10%; left: 50%; transform: translate(-50%, -50%); }
-.circle-item-9 { top: 50%; left: 50%; transform: translate(-50%, -50%); }
-
-
-.followers{
+.followers-b{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.followers-c{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .followers-container{
@@ -118,6 +73,8 @@ span{
     justify-content: center;
     align-items: center;
 }
+
+
 
 /* Responsive Styles */
 @media (max-width: 1200px) {
