--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,27 @@ body {
     display: none;
     /* Chrome, Safari, and Opera */
 }
+
+#progress {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: grid;
+    place-items: center;
+  }
+  
+  #progress-value {
+    display: block;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    font-weight: 600;
+    font-size: 20px;
+  }
