--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -96,14 +96,13 @@
 }
 
 .comedy-img-con{
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 400px;
 }
 
 .comedy-img {
     width: 100%;
     height: 100%;
-    margin-left: 50px;
 }
 
 
