--- a/src/components/ContinuousCarousel/index.css
+++ b/src/components/ContinuousCarousel/index.css
@@ -33,7 +33,7 @@
   color: #082354;
   font-size: 18px;
   font-weight: bold;
-  padding-top: 15px; 
+  padding-top: 10px; 
   margin-left: 0px;
 }
 
@@ -44,10 +44,10 @@
 }
 
 .caption{
-  margin-right: 30px;
+  margin-right: 10px;
   color: #0157F0;
   font-size: 20px;
-
+  padding: 5px;
 }
 
 .slick-prev:before, .slick-next:before {
